# anon1

./: README.md
Classical/: CMakeLists.txt
Classical/src/: main.cpp
Classical/src/bench/: benchmark.cpp  benchmark.hpp
Classical/src/crypto/kzg/: check.hpp  commit.hpp  crypto_init.hpp  eval.cpp  kzg.hpp  poly_utils.cpp  polynomial.hpp  update.cpp  verify_update.cpp
Classical/src/crypto/transcript/: transcript.cpp  transcript.hpp
Classical/src/snark/iop/: iop.hpp  prover.cpp  verifier.cpp
Classical/tests/: kzg_tests.cpp
Kupcom-separate/: CMakeLists.txt  Rebuild.txt
Kupcom-separate/src/: check.cpp  commit.cpp  commitment_key.hpp  eval.cpp  eval.hpp  kgen.cpp  kgen.hpp  main.cpp  remove.cpp  types.hpp  update.hpp
